1 commit segunda clase
Nuevo titulo y nuevo parrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
         <h1>Primera Clase de GIT</h1>
         <p>Hola</p>
+
+        <h1>Segunda clase de git</h1>
+        <p>sisas</p>
 </body>
 </html>
