Segundo commit de clase 2
Nuevo parrafo

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 
         <h1>Segunda clase de git</h1>
         <p>sisas</p>
+        <p>El comando para unir ramas o fusionarlas </p>
 </body>
 </html>
