--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <h1>Segunda clase de git</h1>
         <p>sisas</p>
         <p>El comando para unir ramas o fusionarlas </p>
+
+        <h2>repositorios remotodos</h2>
+        <p>GitHub , GitLab and </p>
 </body>
 </html>
